--- a/src/main/resources/static/public/css/index-self.css
+++ b/src/main/resources/static/public/css/index-self.css
@@ -24,6 +24,11 @@
     color: #0c2135;
 }
 
+.skin-blue .main-header .navbar .nav>li>a:focus {
+    background: #fff;
+    color: #0c2135;
+}
+
 .skin-blue .sidebar-menu>li:hover>a, .skin-blue .sidebar-menu>li.active>a {
     background: #001529;
 }
